--- a/templates/_base.htm
+++ b/templates/_base.htm
@@ -2,60 +2,55 @@
  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>{% block title %} Wizardry Tournament 2014 {% endblock %}</title>
-	<link href="/static/glike.css" rel="stylesheet" type="text/css"/>
-<!--    <script type="text/javascript" src="/static/javascripts/jquery-1.6.2.min.js"></script> -->
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script type="text/javascript" src="/static/javascripts/vex.combined.min.js"></script>
-        <link rel="stylesheet" href="/static/css/vex.css" />
-        <link rel="stylesheet" href="/static/css/vex-theme-os.css" />
-        <style type="text/css">
-           #footer {
-               text-align:center;   
-               color:#ff9;
-               font-size:9px;
-           }
-        </style>
+	<title>{% block title %} Table Tennis Umpire{% endblock %}</title>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+
+        <!-- jQuery library -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+        <!-- Popper JS -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+        <script type="text/javascript" src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+
+        <!-- Latest compiled JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+
+        <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" />
+        <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+        <script type="text/javascript" src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+        <script src="/static/javascripts/jquery.ui.touch-punch.min.js"></script>
+
         {% block stylesheet %}
         {% endblock %}
         {% block javascript %}
         {% endblock %}
 </head>
 <body>
-        <div id="menu">
-           <h1><a href="index.htm">Wizardry Tournament 2014</a></h1>
-           <ul>
-               <li><a href="/photos"
-                       {% if path== '/photos' %}
-                          class="selected"
-                       {% endif %}
-               >The Photo Challenges</a></li>
+        <nav class="navbar navbar-expand-sm bg-light">
+         <ul class="navbar-nav">
+           <li class="nav-item">
+             <a class="nav-link" href="#">Home</a>
+           </li>
 <!--
-               <li><a href="/feast"
-                       {% if path== '/feast' %}
-                          class="selected"
-                       {% endif %}
-               >The Feast</a></li>
+           <li class="nav-item">
+             <a class="nav-link" href="#">Score Indicator</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="templates/ref.htm">References</a>
+           </li>
 -->
-               <li><a href="/sorting"
-                       {% if path== '/sorting' %}
-                          class="selected"
-                       {% endif %}
-               >The Sorting Ceremony</a></li>
-               <li><a href="/rules"
-                       {% if path== '/rules' %}
-                          class="selected"
-                       {% endif %}
-               >The House Rules</a></li>
-           </ul>
-        </div>
-	<div id="bodycontent">
+         </ul>
+        </nav>
+        <div id="bodycontent">
+	    <div class="container">
 		{% block bodycontent %}
 		Replace this
 		{% endblock %}
+	    </div>
 	</div>
-        <div id="footer">
-         Event proudly brought to you by <b>OCT Team Building Committee:</b><br>ckoh, keshav, lampuisuan, limbeebee, sereneho, tankokhua
-        </div>
 </body>
 </html>
