--- a/templates/index.htm
+++ b/templates/index.htm
@@ -1,63 +1,96 @@
 {% extends "templates/_base.htm" %}
+
 {% block stylesheet %}
 <style type="text/css">
-        #answers {
-                font-size:30px;
-                color:white;
-                text-align:center;
-        }
-        input[type="text"] { 
-             margin-bottom:5px;
-        }
+   .container {
+      margin-left: 20px;
+      margin-top: 10px;
+   }
+   #answers {
+      margin-top: 10px;
+      font-size:15pt;
+      margin-bottom: 10px;
+   }
+   button {
+      margin-left: 15px;
+      margin-top: 35px;
+      height:35px;
+   }
+
+   .plabel {
+      padding-right:10px;
+   }
+   
+   .squaredotted {
+      width: 60px;
+      height: 60px;
+      line-height: 60px;
+      border: 1px dotted green;
+      margin-bottom: 5px;
+      margin-left: 5px;
+      text-align: center;
+      float: left;
+      color: gray;
+      background-color: lightgreen;
+   }
+   .buffer {
+      width: 60px;
+      height: 60px;
+      line-height: 60px;
+      border: 1px dotted white;
+      margin-bottom: 5px;
+      margin-left: 5px;
+      text-align: center;
+      float: left;
+      color: white;
+      background-color: white;
+   }
+
+   .thumbnail {
+      border: 1px solid #ddd;
+      border-radious: 4px;
+      padding: 5px;
+      width: 150px;
+   }
 </style>
 {% endblock %}
+
 {% block javascript %}
          <script type="text/javascript">
-
-            $(document).ready(function() { vex.defaultOptions.className='vex-theme-os';} ); 
-            function getHouse() {
-                var username = document.getElementById("username").value;
-                if(username.length==0) {
-                     vex.dialog.alert("Please enter your username.");
-                     return;
-                }
-                $("#answers").css({"color":"#ffff33","display":"none"});
-                $("#answers").fadeIn(1000);
-                //$("#answers").html("Running...<br>MAY THE ODDS BE EVER IN YOUR FAVOR.");
-                $("#answers").html("Thinking ...<br><img src='static/images/4messages.png'>");
-                $("#header").animate({opacity:'0.0', width:'500px'}, 'slow');
-                $("#header").animate({opacity:'1.0', width:'600px'}, 'slow');
+	    //$(document).ready(function() {
+	    //});
+            function getPhoto() {
+                var score = document.getElementById("score").value;
+                
+                $("#answers").html("Running ...");
                 $.ajax( {
                     type:'POST',
-                    url:'/getHouse',
-                    data:{'username': username},
-                    cache:false,
-                    success: function(html) {
-                      $("#answers").html(html);
-                      $("#lname").fadeIn(3000);
-                      $("#batch").fadeIn(6000);
-                      $("#digit").fadeIn(5000);
-                      $("#desc").fadeIn(5000);
+                    url:'/getPhoto',
+                    data:{'score': score
                     },
+                    cache:false,
+                    success: function(html) {$("#answers").html(html);},
                     error: function(xrq, sts, err) {$("#answers").val("Error");},
                 });
             }
+
          </script>
 {% endblock %}
 
 {% block bodycontent %}
-<div id="header">The Sorting Ceremony</div>
-<div align="center"><img src="/static/images/sortinghat.gif"></div>
-<meta name="viewport" content="user-scalable=0, initial-scale=1.0">
-<center>
-<audio autoplay controls auto>
-<source src="https://dl.dropboxusercontent.com/u/37810870/sorting_hat.ogg?dl=1" type="audio/ogg" width="200px", height="10px">
-<source src="https://dl.dropboxusercontent.com/u/37810870/sorting_hat.mp3?dl=1" type="audio/mpeg" width="200px", height="10px"> 
-<embed src="https://dl.dropboxusercontent.com/u/37810870/sorting_hat.mp3?dl=1" width="200px", height="15px">
-</audio>
-</center>
-<p id="house"> Enter your username:<br>
-<input type="text" id="username" value={{username}}><br>
-<input type=button value="Know My House" onclick="getHouse();"></p>
-<div id="answers" align="center"><p>{{answers}}</p></div>
+<h3>Photo Download</h3>
+<form>
+   <div class="row">
+      <div class="form-group">
+        <label for="score">Enter photo ID (e.g. AK002EDGVVXB):</label>
+        <input type="text" class="form-control col-9" id="score" value={{score}}>
+      </div>
+      <div class="row">
+         <button type="button" class="btn btn-primary" onclick="getPhoto();">Submit</button>
+      </div>
+   </div>
+   <div class="row">
+      <div class="shadow border border-success rounded text-center col-10" id="answers">{{answers}}</div>
+   </div>
+</form>
 {% endblock %}
