--- a/templates/_base.htm
+++ b/templates/_base.htm
@@ -2,7 +2,7 @@
  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>{% block title %} Table Tennis Umpire{% endblock %}</title>
+	<title>{% block title %}J Studio{% endblock %}</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,32 +24,46 @@
         <script type="text/javascript" src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
         <script src="/static/javascripts/jquery.ui.touch-punch.min.js"></script>
 
+       <style>
+        div {
+          background-image: url("/static/images/background.png");
+        }
+       </style>
+
         {% block stylesheet %}
         {% endblock %}
         {% block javascript %}
         {% endblock %}
 </head>
 <body>
+<!--
         <nav class="navbar navbar-expand-sm bg-light">
          <ul class="navbar-nav">
            <li class="nav-item">
              <a class="nav-link" href="#">Home</a>
            </li>
-<!--
-           <li class="nav-item">
-             <a class="nav-link" href="#">Score Indicator</a>
-           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="templates/ref.htm">References</a>
-           </li>
--->
          </ul>
         </nav>
+-->
         <div id="bodycontent">
 	    <div class="container">
-		{% block bodycontent %}
-		Replace this
-		{% endblock %}
+              <div class="row">
+                <div class="col-3">
+                   <img src="/static/images/profile.png" width="150" height="150">
+                </div>
+                <div class="col-9">
+                   <img src="/static/images/top.png" width="600" height="300">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-7">
+                   <img src="/static/images/roll.png" width="600" height="300">
+                </div>
+                <div class="col-5">
+		 {% block bodycontent %}
+		 Replace this
+		 {% endblock %}
+                </div>
 	    </div>
 	</div>
 </body>
