--- a/templates/_base.htm
+++ b/templates/_base.htm
@@ -25,8 +25,9 @@
         <script src="/static/javascripts/jquery.ui.touch-punch.min.js"></script>
 
        <style>
-        div {
+        body {
           background-image: url("/static/images/background.png");
+          background-size: cover;
         }
        </style>
 
