--- a/templates/index.htm
+++ b/templates/index.htm
@@ -48,11 +48,11 @@
 {% endblock %}
 
 {% block bodycontent %}
-<h2>Photo Download</h2>
+<h2 style="color:#ffffff;">Photo Download</h2>
 <form>
    <div class="row">
       <div>
-        <label for="score">Enter 12-characters photo ID (e.g. AK002EDGVVXB):</label>
+        <label style="color:#ffffff;" for="score">Enter 12-characters photo ID (e.g. AK002EDGVVXB):</label>
      </div>
       <div class="form-group">
         <input type="text" class="form-control" id="score" value={{score}}>
