Update profile section

--- a/templates/_base.htm
+++ b/templates/_base.htm
@@ -51,6 +51,10 @@
               <div class="row">
                 <div class="col-3">
                    <img src="/static/images/profile.png" width="150" height="150">
+                   <p style="color:#ffffff;">
+                      <img src="/static/images/fb.jpg" width="20" height="20">&nbsp;<a href="https://tinyurl.com/studiojjeffrey" target="_blank">tinyurl.com/studiojjeffrey</a>
+                      <br><a href="mailto:studiojjeffrey@gmail.com"><span class="glyphicon glyphicon-envelope">Email: studiojjeffrey@gmail.com</span></a>
+                   </p>
                 </div>
                 <div class="col-9">
                    <img src="/static/images/top.png" width="600" height="300">
