--- a/templates/answers.htm
+++ b/templates/answers.htm
@@ -1,6 +1,6 @@
 <div id="answers">
 {% if not error %}
-<p>Click on the image to download it.</p>
+<p style="color:#ffffff'">Click on the image to download it.</p>
 <a href="/static/images/{{class}}/{{orderid}}" download>
 <img src="/static/images/{{class}}/{{orderid}}" alt="Photo not found." class="thumbnail" />
 </a>
