--- a/templates/_base.htm
+++ b/templates/_base.htm
@@ -52,8 +52,11 @@
                 <div class="col-3">
                    <img src="/static/images/profile.png" width="150" height="150">
                    <p style="color:#ffffff;">
-                      <img src="/static/images/fb.jpg" width="20" height="20">&nbsp;<a href="https://tinyurl.com/studiojjeffrey" target="_blank">tinyurl.com/studiojjeffrey</a>
-                      <br><a href="mailto:studiojjeffrey@gmail.com"><span class="glyphicon glyphicon-envelope">Email: studiojjeffrey@gmail.com</span></a>
+                      <img src="/static/images/fb.jpg" width="20" height="20">&nbsp;<a href="https://tinyurl.com/studiojjeffrey" target="_blank">tinyurl.com/studiojjeffrey</a><br>
+                      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+  <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/></svg>
+                      <a href="mailto:studiojjeffrey@gmail.com">studiojjeffrey@gmail.com</a><br><br>
+                      We provide professional photo taking services as well as graduation and concert filming for kindergartens and families!
                    </p>
                 </div>
                 <div class="col-9">
