Update photo order section

--- a/templates/_base.htm
+++ b/templates/_base.htm
@@ -2,7 +2,7 @@
  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>{% block title %}J Studio{% endblock %}</title>
+	<title>{% block title %}Studio J{% endblock %}</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -64,13 +64,13 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-7">
-                   <img src="/static/images/roll.png" width="600" height="300">
-                </div>
-                <div class="col-5">
+                <div class="col-3">
 		 {% block bodycontent %}
 		 Replace this
 		 {% endblock %}
+                </div>
+                <div class="col-9">
+                   <img src="/static/images/roll.png" width="600" height="300">
                 </div>
 	    </div>
 	</div>
