--- a/templates/index.htm
+++ b/templates/index.htm
@@ -49,7 +49,7 @@
 
 {% block bodycontent %}
 <h2 style="color:#ffffff;">Photo Download</h2>
-<form>
+<form style="margin-left:15px;">
    <div class="row">
       <div>
         <label style="color:#ffffff;" for="score">Enter 12-characters photo ID (e.g. AK002EDGVVXB):</label>
