--- a/templates/_base.htm
+++ b/templates/_base.htm
@@ -47,8 +47,8 @@
         </nav>
 -->
         <div id="bodycontent">
-	    <div class="container">
-              <div class="row">
+	    <div class="container-xxl" style="margin-left:10px;">
+              <div class="row" style="margin-top:10px;">
                 <div class="col-3">
                    <img src="/static/images/profile.png" width="150" height="150">
                    <p style="color:#ffffff;">
@@ -60,7 +60,7 @@
                    </p>
                 </div>
                 <div class="col-9">
-                   <img src="/static/images/top.png" width="600" height="300">
+                   <img src="/static/images/top.png" width="100%" height="100%">
                 </div>
               </div>
               <div class="row">
@@ -70,7 +70,7 @@
 		 {% endblock %}
                 </div>
                 <div class="col-9">
-                   <img src="/static/images/roll.png" width="600" height="300">
+                   <img src="/static/images/roll.png" width="100%" height="100%">
                 </div>
 	    </div>
 	</div>
