Update to work for mobile

--- a/templates/index.htm
+++ b/templates/index.htm
@@ -48,8 +48,8 @@
 {% endblock %}
 
 {% block bodycontent %}
-<h2 style="color:#ffffff;margin-left:-35px;margin-top:10px;">Photo Download</h2>
-<form style="margin-left:-20px;">
+<h2 class="dlheader" style="color:#ffffff;margin-left1:-35px;margin-top:10px;">Photo Download</h2>
+<form class="dlphoto" style="margin-left1:-20px;">
    <div class="row">
       <div>
         <label style="color:#ffffff;" for="score">Enter 12-characters photo ID (e.g. AK002EDGVVXB):</label>
