--- a/templates/_base.htm
+++ b/templates/_base.htm
@@ -25,6 +25,32 @@
         <script src="/static/javascripts/jquery.ui.touch-punch.min.js"></script>
 
        <style>
+        .dlheader {
+            margin-left: -35px;
+        }
+        .dlphoto {
+            margin-left: -20px;
+        }
+
+        @media only screen and (max-width: 600px) {
+            [class*="col-xs-"] {
+               width:100%;
+            }
+            div.picture {
+               width:0%;
+               display:none;
+            }
+            .dlheader {
+               margin-left: 0px;
+               margin-right: 10px;
+            }
+            .dlphoto {
+               margin-left: 10px;
+               margin-right: 10px;
+            }
+        }
+
+
         a {
            font-size:14px;
         }
@@ -51,26 +77,28 @@
 -->
         <div id="bodycontent">
 	    <div class="container-xxl" style="margin-left:20px;">
-              <div class="row" style="margin-top:15px;">
-                <div class="col-2">
-                   <img src="/static/images/profile.png" width="150" height="150">
-                   <p style="color:#ffffff;">
+              <div class="row" style="margin-top:15px;margin-right:5px;">
+                <div class="col-xl-2 col-12 mobile">
+                   <center><img src="/static/images/profile.png" width="150" height="150"></center>
+                   <center><div style="color:#ffffff;">
                       <img src="/static/images/fb.jpg" width="18" height="18">&nbsp;<a href="https://tinyurl.com/studiojjeffrey" target="_blank">tinyurl.com/studiojjeffrey</a><br>
                       <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
   <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/></svg>
                       <a href="mailto:studiojjeffrey@gmail.com">studiojjeffrey@gmail.com</a><br><br>
+                   </div></center>
+                   <div style="color:#ffffff;">
                       We provide professional photo taking services as well as graduation and concert filming for kindergartens and families!
-                   </p>
+                   </div>
                 </div>
-                <div class="col-10">
+                <div class="col-xl-10 col-12 picture">
                    <img src="/static/images/top.png" width="100%" height="100%">
                 </div>
               </div>
               <div class="row">
-                <div class="col-9">
+                <div class="col-xl-9 col-12 picture">
                    <img src="/static/images/roll.png" width="100%" height="100%">
                 </div>
-                <div class="col-3">
+                <div class="col-xl-3 col-12 mobile">
 		 {% block bodycontent %}
 		 Replace this
 		 {% endblock %}
