--- a/templates/photos.htm
+++ b/templates/photos.htm
@@ -1,4 +1,4 @@
-{% extends "templates/_base.htm" %}
+{% extends "_base.htm" %}
 {% block stylesheet %}
 <link rel="stylesheet" href="/static/css/layout.css" type="text/css" media="all"/>
 <link rel="stylesheet" href="/static/css/jd.gallery.css" type="text/css" media="all"/>
