--- a/templates/answers.htm
+++ b/templates/answers.htm
@@ -1,8 +1,8 @@
 <div id="answers">
 {% if not error %}
 <p style="color:#ffffff;font-size:12px;">Click on the image below to download.</p>
-<a href="/static/images/{{class}}/{{orderid}}" download>
-<img src="/static/images/{{class}}/{{orderid}}" alt="Photo not found." class="thumbnail" />
+<a href="/static/images/{{classid}}/{{orderid}}" download>
+<img src="/static/images/{{classid}}/{{orderid}}" alt="Photo not found." class="thumbnail" />
 </a>
 {% endif %}
 {% if error %}
